--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    overflow: hidden;
+}
 .startmenu_toggle{
     display: none;
 }
@@ -10,7 +13,8 @@
     height: 50px;
     position: absolute;
     bottom: 0;
-    background: rgba(255, 255, 255, 0.644);
+    background: linear-gradient(to right ,rgba(216, 232, 243, 0.83),rgba(170, 208, 233, 0.83),rgba(255, 255, 255, 0.83));
+    backdrop-filter: blur(5px);
 }
 .icons{
     margin: auto;
